tests/pos/simpleMatchCase.scala

class Foo {
  def foo: Unit = {
    "c" match {
      case x =>
        println("a")
        println("b")
    }
  }
}
